# LaboratorioDataScience

./: .gitignore
act3/: main.py  pyproject.toml  tips_marco_casati.ipynb
act4/: diamonds_marco_casati.ipynb  main.py  pyproject.toml  requirements.txt
gasolinera/: main.py  notebook_carb.ipynb  pyproject.toml  requirements.txt
hito2/: README.md  entrega2.ipynb  entrega2_marco_casati.ipynb  main.py  pyproject.toml
lab1/: hola.ipynb  prueba.py  pyproject.toml  requirements.txt
